# BMSTU-VP-LAB

./: CMakeLists.txt
src/: consts.h  main.cpp  menuFuncs.cpp  menuFuncs.h
src/ConsoleInterfaceRender/: ConsoleInterfaceRender.cpp  ConsoleInterfaceRender.h
src/Menu/: CMenu.cpp  CMenu.h
src/MenuItem/: CMenuItem.cpp  CMenuItem.h
src/containers/: MyVector.h
src/entities/account/: account.entity.h
src/entities/administrator/: administrator.entity.h
src/entities/dialog/: dialog.entity.h
src/entities/interest/: interest.entity.h
src/entities/message/: message.entity.h
src/entities/moderator/: moderator.entity.h
src/entities/reminder/: reminder.entity.h
src/entities/topic/: topic.entity.h
src/entities/user/: user.entity.cpp  user.entity.h
src/helpers/userFiller/: userFiller.cpp  userFiller.h
src/menu/: menu.cpp  menu.h
src/menu/menuPoint/: menuPoint.cpp  menuPoint.h
src/models/user/: user.cpp  user.h
src/modules/: controller.h  model.h  module.h  observe.h  obsevre.cpp  view.h
src/modules/menu/: menu.types.h
src/modules/menu/menuConfig/: menu.config.cpp  menu.config.h
src/modules/menu/menuController/: menu.controller.h
src/modules/menu/menuModel/: menu.model.h
src/modules/menu/menuModule/: menu.module.cpp  menu.module.h
src/modules/menu/menuView/: menu.view.cpp  menu.view.h
src/modules/menuPoint/: menuPoint.types.h
src/modules/menuPoint/menuPointController/: menuPoint.controller.h
src/modules/menuPoint/menuPointModel/: menuPoint.model.h
src/modules/menuPoint/menuPointModule/: menuPoint.module.cpp  menuPoint.module.h
src/modules/menuPoint/menuPointView/: menuPoint.view.cpp  menuPoint.view.h
src/modules/signIn/signInController/: signIn.controller.cpp  signIn.controller.h
src/modules/signIn/signInModel/: signIn.model.h
src/modules/signIn/signInModule/: signIn.module.cpp  signIn.module.h
src/modules/signIn/signInView/: signIn.view.cpp  signIn.view.h
src/modules/signUp/signUpController/: signUp.controller.cpp  signUp.controller.h
src/modules/signUp/signUpModel/: signUp.model.h
src/modules/signUp/signUpModule/: signUp.module.cpp  signUp.module.h
src/modules/signUp/signUpView/: signUp.view.cpp  signUp.view.h
src/modules/temp/addUser/addUserController/: addUser.controller.h
src/modules/temp/addUser/addUserModel/: addUser.model.h
src/modules/temp/addUser/addUserModule/: addUser.module.cpp  addUser.module.h
src/modules/temp/addUser/addUserView/: addUser.view.cpp  addUser.view.h
src/modules/temp/showUsers/showUsersController/: showUsers.controller.h
src/modules/temp/showUsers/showUsersModel/: showUsers.model.h
src/modules/temp/showUsers/showUsersModule/: showUsers.module.cpp  showUsers.module.h
src/modules/temp/showUsers/showUsersView/: showUsers.view.cpp  showUsers.view.h
src/modules/temp/sortUsers/sortUsersController/: sortUsers.controller.h
src/modules/temp/sortUsers/sortUsersModel/: sortUsers.model.h
src/modules/temp/sortUsers/sortUsersModule/: sortUsers.module.cpp  sortUsers.module.h
src/modules/temp/sortUsers/sortUsersView/: sortUsers.view.cpp  sortUsers.view.h
src/render/: render.cpp  render.h
src/storage/: storage.cpp  storage.h
src/utils/: inheritance.h  utils.cpp  utils.h
src/utils/input/: input.utils.cpp  input.utils.h
