cmake_minimum_required(VERSION 3.20)

project(Lab1)

add_executable(Lab1
    src/main.cpp
    src/consts.h
    src/menuFuncs.h
    src/menuFuncs.cpp
    src/Menu/CMenu.h
    src/Menu/CMenu.cpp
    src/MenuItem/CMenuItem.h
    src/MenuItem/CMenuItem.cpp
    src/utils/utils.h
    src/utils/utils.cpp
)